--- a/projects/index.html
+++ b/projects/index.html
@@ -67,6 +67,20 @@
 
 
 						<div id="content">
+							<img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/projects/2bboard/0.png" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">2b Board</h3>
+							<p>1/22/21</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								just an offshoot of /laptopkeeb, this was originally the keyboard used but has been since cast aside, it still works tho
+								<li class='rr'>Status: [Completed]</li></ol>
+									<div class="label">
+								<p><a href="/projects/2bboard">Read More</a></p>
+							</div>
+						</div>		
+
+
+						<div id="content">
 							<img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/0.png" style="width: 250px;"/>
 							<h3 style="float: right; right: 4px;">Merged Dactyl</h3>
 							<p>1/1/21</p>
