--- a/re/side.html
+++ b/re/side.html
@@ -39,6 +39,8 @@
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
+  
+  <li><a href="https://relivesight.com/projects/2bboard/">2b board</a></li>
   <li><a href="https://relivesight.com/projects/mergeddactyl/">mergeddactyl</a></li>
   <li><a href="https://relivesight.com/projects/videodeck/">videodeck</a></li>
   <li><a href="https://relivesight.com/projects/portavoltex/">portavoltex</a></li>
