IF THIS IS A ROMCOM KILL THE DIRECTOR

--- a/art/index.html
+++ b/art/index.html
@@ -67,7 +67,7 @@
 
 
                         <div id="ccontent">
-                            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/art/published/finals/square-logo.png" style="width: 160px;"/>
+                            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/art/published/finals/square-logo.jpg" style="width: 160px;"/>
                             <br><br><h3>Published Era</h3>            <ol class="playlist_info">
                                 <li>re:Live Society Phase Two <</li><br>
                             </ol>
