--- a/mobile/index.html
+++ b/mobile/index.html
@@ -33,7 +33,7 @@
       <img src="../images/nav/navig-main.png" class="naviBanners">
       <a href="/bio" class="navi"><img src="../images/nav/flow.png">bio</a>
       <a href="/blog" class="navi"><img src="../images/nav/flow.png">blog</a>
-
+      <a href="/highlights" class="navi"><img src="../images/nav/flow.png">highlights</a>
             <a href="/reference" class="navi"><img src="../images/nav/flow.png">reference</a>
             <a href="/lists" class="navi"><img src="../images/nav/flow.png">lists</a>
 
