remove mobile redirect

--- a/athame/index.html
+++ b/athame/index.html
@@ -12,10 +12,6 @@
     <link rel="stylesheet" media="screen"/>
   </head>
 
-  <script language="javascript">
-    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-      location.href = '/mobile';}
-  </script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
   <script>
@@ -48,8 +44,9 @@
           <img style="width:160px;" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/athame/a/1.png"/>
           <p></p>
           <img style="width:160px;" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/athame/a/1.png"/>
-  
-          
+          <p></p>
+          <img style="width:160px;" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/athame/a/1.png"/>
+          <p></p>
         </div>
 
        
@@ -69,7 +66,7 @@
             <p class="text-center">UNAUTHORIZED ACCESS IS A VIOLATION OF</p>
             <p class="text-center"> PROTOCOL 13-B AND IS PUNISHABLE BY DEATH</p>
             <p class="text-center">_______________________________________</p>
-            <h1 class="text-center">PROJECT: ATHAME</h1>
+            <h1 class="text-center">PROJECT ATHAME</h1>
             <p class="text-center">¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯</p>            
             <h2 class="text-center">ACCESS-03 CLASSIFIED</h2>
            <br><p></p><br>
@@ -293,7 +290,7 @@
               at 2387, injured at 135, and unharmed at 786. Reconstruction of sonic transport tunnel at 30%, projected completion:
               XXXX-01-09. Social report damage estimates at 0.0003% of local population, no cause for action.  
             </p>
-            <p>Project: Athame ALPHA-4 Precedence rescinded. All data reports below Clearance 10 marked for 
+            <p>Project Athame ALPHA-4 Precedence rescinded. All data reports below Clearance 10 marked for 
               destruction immediately. Data Reports: S1-IR-00437823-D through S1-IR-004378235-F, contain
             detailed analysis of all recorded data. Newly observed self-destructive properties noted
             on all _______ files. Additionally all ______ will undergo further inductive protection to prevent
@@ -334,7 +331,9 @@
         <img style="width:160px;" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/athame/a/1.png"/>
         <p></p>
         <img style="width:160px;" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/athame/a/1.png"/>
-
+          <p></p>
+          <img style="width:160px;" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/athame/a/1.png"/>
+          <p></p>
 
       </div>
 
