removed images and 1

--- a/artlogs/index.html
+++ b/artlogs/index.html
@@ -67,7 +67,7 @@
 
 
                         <div id="ccontent">
-                            <img class="auditorium" src="../images/art/draws/3.0.png" style="width: 160px;"/>
+                            <img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/art/3.0.jpg" style="width: 160px;"/>
                             <br><br><h3>My Art</h3>            <ol class="playlist_info">
                                 <li>arts that i make <</li><br>
                             </ol>
