yeah yeah updates or smth

--- a/highlights/index.html
+++ b/highlights/index.html
@@ -58,6 +58,7 @@
           <li><a href="https://relivesight.com/projects/433/" target="_blank">433% keyboard</a> - possibly the largest keyboard built by one person</li>
           <li><a href="https://relivesight.com/projects/portavoltex/" target="_blank">portavoltex</a> - portable sdvx controller</li>
           <li><a href="https://relivesight.com/projects/portavoltex/" target="_blank">videodeck</a> - macro pad with encoders for video editing</li>
+          <li><a href="https://relivesight.com/athame/" target="_blank">project athame</a> - alternate reality "art"/story page </li>
           <li><a href="https://relivesight.com/projects/arcade/" target="_blank">arcade controller</a> - a simple arcade controller i built to play tetris </li>
           <li><a href="https://relivesight.com/projects/mikuyboard/" target="_blank">mikuyboard</a> - a 128 keyboard covered in hastune miku stickers</li>
           <li><a href="https://relivesight.com/projects/quarandream/" target="_blank">quarandream</a> - my favorite split keyboard ive made</li>
