--- a/re/side.html
+++ b/re/side.html
@@ -28,7 +28,6 @@
     <li><a href="https://relivesight.com/athame/">project athame</a></li>
   <li><a href="https://relivesight.com/art/">my "art"</a></li>
   <li><a href="https://relivesight.com/manga/">manga</a></li>
-  <li><a href="https://relivesight.com/spam/">spam</a></li>
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
@@ -100,6 +99,8 @@
 
 <a href="">Study Logs</a>
   <ul>
+    <li><a href="https://relivesight.com/studylogs/recursive/">recursive</a></li>
+    <li><a href="https://relivesight.com/studylogs/datamosh/">datamoshing</a></li>
     <li><a href="https://relivesight.com/studylogs/dithering/">dithering</a></li>
   </ul>
 
