--- a/studylogs/dithering/index.html
+++ b/studylogs/dithering/index.html
@@ -41,8 +41,8 @@
               <img src="" width="500px">
         
             
-              <h1>Log 1: Dithery Dithery Dit</h1>
-             <p>first i tried this tool: <a type="_blank" href="http://www.ximagic.com/g_index.html">ximagic's dithering</a>
+              <h1>Log 1: Do I Even Know What Dithering Is?</h1>
+             <p>first i tried this tool: <a target="_blank" href="http://www.ximagic.com/g_index.html">ximagic's dithering</a>
             on an image of shinji from evangelion, heres the original photo:</p>
                 <img src="https://vibrant-hodgkin-c6365a.netlify.app/studylogs/dithering/3.png" width="350px">
                 <p>and here is it passed through the ditherer:</p>
