--- a/artlogs/index.html
+++ b/artlogs/index.html
@@ -56,6 +56,14 @@
 										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
 								</div>
 						</div>
+                        
+                        <div id="ccontent">
+                            <img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/annex/21.jpg" style="width: 160px;"/>
+                            <br><br><h3>Annex</h3>            <ol class="playlist_info">
+                                <li>imaginary discography page <</li><br>
+                            </ol>
+                            <a href="/annex" class="label3">CLICK TO SEE </a>
+                        </div>
 
                         <div id="ccontent">
                             <img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/athame/a/4.png" style="width: 160px;"/>
@@ -88,7 +96,7 @@
 
 
 
-
+<!--
                 <div id="ccontent">
                     <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1mTdqyW4QeplRWg5DZn0B1Vd8atBbdYXx" style="width: 160px;"/>
                     <br><br><h3>Spam</h3>            <ol class="playlist_info">
@@ -99,7 +107,7 @@
 
                 </div>
 
-
+-->
 
         <div id="site_entry">
             <p>[ <a href="#">Back to Top</a> ]</p>
