--- a/mobile/index.html
+++ b/mobile/index.html
@@ -76,8 +76,12 @@
       <img class="logo" style="width:300px;" src="../images/home/tumble.png" />
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />-->
       <div class="row imgPixel">
- 
-        
+
+              <div class="col-sm-9 col-md-offset-1">
+                <h3 style="margin-bottom:10px;">02/04/21</h3>
+                <p style="margin-bottom:30px;">"take care of yourself"</p>
+              </div>
+
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">12/25/20 </h3>
           <p style="margin-bottom:30px;">:anatomical_heart: meri krizms, or alternatively: hepi halliedys</p>
