--- a/annex/mobile/index.html
+++ b/annex/mobile/index.html
@@ -65,7 +65,7 @@
                 src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/annex/36.jpg"></img><figcaption> &lt!&gt <br> ​ </figcaption></td>
      <td align="center"><img style="width: 175px"
                 class="img-responsive"
-                src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/annex/4.jpg"></img><figcaption> ╝.i┼cant{*(u■)}., <br> ​ ​   </figcaption></td>
+                src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/annex/4.jpg"></img><figcaption> ╝.i┼cant{*(■)}., <br> ​ ​   </figcaption></td>
       </table>
 
       <table class="table" style="width: 75%; font-size: 80%">
