--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -104,7 +104,7 @@
         <table class="tableizer-table">
           <thead><tr>
             
-             <tr><td>Estimated List Completeness [Limited Accuracy] : ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱ 85%</td></tr>
+             <tr><td>Estimated List Completeness [Limited Accuracy] : ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱ 80%</td></tr>
              <tr><td>Note: Ratings were placed after completion of the show and are extremely susceptible to timely bias, they
               reflect both a combination of my enjoyment of them and how good i believe they are. 
             </td></tr>
