--- a/re/side.html
+++ b/re/side.html
@@ -32,19 +32,18 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
-    <li><a href="https://relivesight.com/projects/laptopkeeb/">laptopkeeb</a></li>
-  <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/potentials/">potentials</a></li>
   </ul>
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
-  
+  <li><a href="https://relivesight.com/projects/laptopkeeb/">laptopkeeb</a></li>
   <li><a href="https://relivesight.com/projects/2bboard/">2b board</a></li>
   <li><a href="https://relivesight.com/projects/mergeddactyl/">mergeddactyl</a></li>
   <li><a href="https://relivesight.com/projects/videodeck/">videodeck</a></li>
   <li><a href="https://relivesight.com/projects/portavoltex/">portavoltex</a></li>
+  <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
   <li><a href="https://relivesight.com/projects/gun/">gun</a></li>
   <li><a href="https://relivesight.com/projects/hornet/">hornet</a></li>
   <li><a href="https://relivesight.com/projects/various/">various</a></li>
@@ -57,45 +56,45 @@
   <li><a href="https://relivesight.com/projects/allinone/">all in one</a></li>
   <li><a href="https://relivesight.com/projects/arcade/">arcade cntrlr</a></li>
   <li><a href="https://relivesight.com/projects/433/">433% keyboard</a></li>
-  <li><a href="https://relivesight.com/projects/xbohotas/">xbo hotas</a></li>
+  <li><a href="https://relivesight.com/projects/xbohotas/">xbox hotas</a></li>
   <li><a href="https://relivesight.com/projects/crnkbd/">crnkbd</a></li>
   <li><a href="https://relivesight.com/projects/manuform-002/">manuform-002</a></li>
   <li><a href="https://relivesight.com/projects/manuform-003/">manuform-003</a></li>
-<li><a href="https://relivesight.com/projects/karambit/">karambit</a></li>
-<li><a href="https://relivesight.com/projects/mikuyboard/">mikuyboard</a></li>
-<li><a href="https://relivesight.com/projects/boxmiku/">box miku</a></li>
-<li><a href="https://relivesight.com/projects/wiitea/">wii tea</a></li>
-<li><a href="https://relivesight.com/projects/smore/">s'more</a></li>
-<li><a href="https://relivesight.com/projects/2b/">2b figurine</a></li>
-<li><a href="https://relivesight.com/projects/9s/">9s figurine</a></li>
-<li><a href="https://relivesight.com/projects/dactylknight/">dactyl knight</a></li>
-<li><a href="https://relivesight.com/projects/elytra/">elytra</a></li>
-<li><a href="https://relivesight.com/projects/quarandream/">quarandream</a></li>
-<li><a href="https://relivesight.com/projects/compaqmx11800/">compaq mx11800</a></li>
-<li><a href="https://relivesight.com/projects/gergo/">gergo</a></li>
-<li><a href="https://relivesight.com/projects/navi10/">navi10</a></li>
-<li><a href="https://relivesight.com/projects/fc980c/">leopold fc980c</a></li>
-<li><a href="https://relivesight.com/projects/gh60/">gh60</a></li>
-<li><a href="https://relivesight.com/projects/ut472/">ut47.2</a></li>
-<li><a href="https://relivesight.com/projects/butterstick/">butterstick</a></li>
-<li><a href="https://relivesight.com/projects/keeblade/">keeblade</a></li>
-<li><a href="https://relivesight.com/projects/tofuhhkb/">tofu hhkb</a></li>
-<li><a href="https://relivesight.com/projects/steno/">steno</a></li>
-<li><a href="https://relivesight.com/projects/tokyocherry/">tokyo cherry</a></li>
-<li><a href="https://relivesight.com/projects/m122/">ibm m122</a></li>
-<li><a href="https://relivesight.com/projects/modelm/">ibm model m</a></li>
-<li><a href="https://relivesight.com/projects/marthl/">marthl</a></li>
-<li><a href="https://relivesight.com/projects/dz65rgb/">dz65 rgb</a></li>
-<li><a href="https://relivesight.com/projects/tarnish4t/">tarnish 4t</a></li>
-<li><a href="https://relivesight.com/projects/rbsli/">r/b sli</a></li>
-<li><a href="https://relivesight.com/projects/duckymiya/">ducky miya</a></li>
-<li><a href="https://relivesight.com/projects/duckymini/">ducky mini</a></li>
-<li><a href="https://relivesight.com/projects/fruitstwos/">fruits twos</a></li>
-<li><a href="https://relivesight.com/projects/hwmarble/">hw marble</a></li>
-<li><a href="https://relivesight.com/projects/ternduale/">tern duale</a></li>
-<li><a href="https://relivesight.com/projects/suitcase/">suitcase-pc</a></li>
-<li><a href="https://relivesight.com/projects/deskless/">deskless</a></li>
-<li><a href="https://relivesight.com/projects/numpad/">numpad</a></li>
+  <li><a href="https://relivesight.com/projects/karambit/">karambit</a></li>
+  <li><a href="https://relivesight.com/projects/mikuyboard/">mikuyboard</a></li>
+  <li><a href="https://relivesight.com/projects/boxmiku/">box miku</a></li>
+  <li><a href="https://relivesight.com/projects/wiitea/">wii tea</a></li>
+  <li><a href="https://relivesight.com/projects/smore/">s'more</a></li>
+  <li><a href="https://relivesight.com/projects/2b/">2b figurine</a></li>
+  <li><a href="https://relivesight.com/projects/9s/">9s figurine</a></li>
+  <li><a href="https://relivesight.com/projects/dactylknight/">dactyl knight</a></li>
+  <li><a href="https://relivesight.com/projects/elytra/">elytra</a></li>
+  <li><a href="https://relivesight.com/projects/quarandream/">quarandream</a></li>
+  <li><a href="https://relivesight.com/projects/compaqmx11800/">compaq mx11800</a></li>
+  <li><a href="https://relivesight.com/projects/gergo/">gergo</a></li>
+  <li><a href="https://relivesight.com/projects/navi10/">navi10</a></li>
+  <li><a href="https://relivesight.com/projects/fc980c/">leopold fc980c</a></li>
+  <li><a href="https://relivesight.com/projects/gh60/">gh60</a></li>
+  <li><a href="https://relivesight.com/projects/ut472/">ut47.2</a></li>
+  <li><a href="https://relivesight.com/projects/butterstick/">butterstick</a></li>
+  <li><a href="https://relivesight.com/projects/keeblade/">keeblade</a></li>
+  <li><a href="https://relivesight.com/projects/tofuhhkb/">tofu hhkb</a></li>
+  <li><a href="https://relivesight.com/projects/steno/">steno</a></li>
+  <li><a href="https://relivesight.com/projects/tokyocherry/">tokyo cherry</a></li>
+  <li><a href="https://relivesight.com/projects/m122/">ibm m122</a></li>
+  <li><a href="https://relivesight.com/projects/modelm/">ibm model m</a></li>
+  <li><a href="https://relivesight.com/projects/marthl/">marthl</a></li>
+  <li><a href="https://relivesight.com/projects/dz65rgb/">dz65 rgb</a></li>
+  <li><a href="https://relivesight.com/projects/tarnish4t/">tarnish 4t</a></li>
+  <li><a href="https://relivesight.com/projects/rbsli/">r/b sli</a></li>
+  <li><a href="https://relivesight.com/projects/duckymiya/">ducky miya</a></li>
+  <li><a href="https://relivesight.com/projects/duckymini/">ducky mini</a></li>
+  <li><a href="https://relivesight.com/projects/fruitstwos/">fruits twos</a></li>
+  <li><a href="https://relivesight.com/projects/hwmarble/">hw marble</a></li>
+  <li><a href="https://relivesight.com/projects/ternduale/">tern duale</a></li>
+  <li><a href="https://relivesight.com/projects/suitcase/">suitcase-pc</a></li>
+  <li><a href="https://relivesight.com/projects/deskless/">deskless</a></li>
+  <li><a href="https://relivesight.com/projects/numpad/">numpad</a></li>
 </ul>
 
 <a href="">Study Logs</a>
