--- a/edits/index.html
+++ b/edits/index.html
@@ -28,6 +28,17 @@
           <br><br><br><br><br><br><br><br>
           <br><br><br><br><br><br><br><br>
 
+          <p>君の名は。- your name.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/g1V0RBsiKFs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+          <p>あなたが必要 - 𝓃𝑒𝑒𝒹 𝓎𝑜𝓊</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/0iG-sTQcyO4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
           <p>壊れた - 𝕓𝕣𝕠𝕜𝕖𝕟</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/smoW2Hpy8Ss" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
