--- a/re/side.html
+++ b/re/side.html
@@ -9,7 +9,7 @@
 <li><a href="https://relivesight.com/bio/">bio</a></li>
 <li><a href="https://relivesight.com/highlights/">highlights</a></li>
 <li><a href="https://relivesight.com/lists/">lists</a></li>
-<li><a href="https://relivesight.com/video/">video</a></li>
+<li><a href="https://relivesight.com/video/">videos</a></li>
 <li><a href="https://relivesight.com/book/">book</a></li>
 </ul>
 <a href="https://relivesight.com/reference/">Reference Logs</a>
@@ -27,6 +27,7 @@
   <ul>
     <li><a href="https://relivesight.com/annex/">annex</a></li>
     <li><a href="https://relivesight.com/athame/">project athame</a></li>
+  <li><a href="https://relivesight.com/edits/">anime edits</a></li>
   <li><a href="https://relivesight.com/art/">my "art"</a></li>
   <li><a href="https://relivesight.com/manga/">manga</a></li>
   </ul>
