--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -127,6 +127,8 @@
             <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>18</td><td>Tv</td><td class="a0">~</td><td>finally watching it</td></tr>         
             <tr><td class="wat">Princess Jellyfish</td><td>3</td><td>Tv</td><td class="a0">~</td><td>intentional crossdressing?! a miracle</td></tr>         
             <tr><td class="wat">Jujutsu Kaisen</td><td>3</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>         
+            <tr><td class="wat">By the Grace of the Gods</td><td>3</td><td>Tv</td><td class="a0">~</td><td>boring </td></tr>         
+
 
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
             <tr><td class="fav">Shigatsu wa Kimi no Uso</td><td>22</td><td>Tv</td><td class="a9">9.6</td><td>wanna cry?</td></tr>
