--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -123,11 +123,11 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Shingeki no Kyoujin: Final Season</td><td>14</td><td>Tv</td><td class="a0">~</td><td>omg its so good so far</td></tr>
+            <tr><td class="wat">Shingeki no Kyoujin: Final Season</td><td>14</td><td>Tv</td><td class="a0">~</td><td>lets pretend animation shortcuts aren't real</td></tr>
             <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>18</td><td>Tv</td><td class="a0">~</td><td>finally watching it</td></tr>         
             <tr><td class="wat">Princess Jellyfish</td><td>3</td><td>Tv</td><td class="a0">~</td><td>intentional crossdressing?! a miracle</td></tr>         
             <tr><td class="wat">Jujutsu Kaisen</td><td>3</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>         
-            <tr><td class="wat">By the Grace of the Gods</td><td>3</td><td>Tv</td><td class="a0">~</td><td>boring </td></tr>         
+            <tr><td class="wat">By the Grace of the Gods</td><td>3</td><td>Tv</td><td class="a0">~</td><td>extremely boring </td></tr>         
 
 
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
