--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
               <a href="/blog/" class="navi" ><img src="images/nav/flow.png">most recently updated page: blog <img src="images/nav/flow.png"></a>
               ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
 
+              
+              <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
+              <div class="col-sm-9 col-md-offset-1">
+                <h3 style="margin-bottom:10px;">3/17/20 </h3>
+                <p style="margin-bottom:30px;">includes a (working?) set of eyes, contrary to the lore</p>
+              </div>
+
+
               <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
               <div class="col-sm-9 col-md-offset-1">
                 <h3 style="margin-bottom:10px;">02/04/21</h3>
@@ -109,7 +117,7 @@
               <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
               <div class="col-sm-9 col-md-offset-1">
                 <h3 style="margin-bottom:10px;">12/25/20 </h3>
-                <p style="margin-bottom:30px;">:anatomical_heart: meri krizms, or alternatively: hepi halliedys</p>
+                <p style="margin-bottom:30px;">:anatomical_heart: ♡</p>
               </div>
 
               <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
