--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -129,7 +129,6 @@
             <tr><td class="wat">Jujutsu Kaisen</td><td>3</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>         
             <tr><td class="wat">By the Grace of the Gods</td><td>3</td><td>Tv</td><td class="a0">~</td><td>extremely boring </td></tr>         
 
-
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
             <tr><td class="fav">Shigatsu wa Kimi no Uso</td><td>22</td><td>Tv</td><td class="a9">9.6</td><td>wanna cry?</td></tr>
             <tr><td class="fav">Steins;Gate </td><td>24</td><td>Tv</td><td class="a9">9.6</td><td>haAcking to the gate!</td></tr>
@@ -213,9 +212,8 @@
             <tr><td class="cmp">Noragami </td><td>12</td><td>Tv</td><td class="a5">5.5</td><td>that one falling scene</td></tr>
             <tr><td class="cmp">Goblin Slayer </td><td>12</td><td>Tv</td><td class="a5">5.4</td><td>lets not think about how this opens</td></tr>
             <tr><td class="cmp">DRIFTERS </td><td>12</td><td>Tv</td><td class="a5">5.3</td><td>joan of arc waifu, Jesus antagonist</td></tr>
-            <tr><td class="cmp">ReLife </td><td>13</td><td>Tv</td><td class="a5">5.3</td><td>pill show???</td></tr>
+            <tr><td class="cmp">ReLife </td><td>13</td><td>Tv</td><td class="a5">5.3</td><td>pill show the show</td></tr>
             <tr><td class="cmp">K-ON!! </td><td>26</td><td>Tv</td><td class="a5">5.1</td><td>good also but apparently less tho than season 1</td></tr>
-            
             <tr><td class="drp">Dungeon ni Deai wo Motomeru no wa Machigatteiru Darou ka II </td><td>7</td><td>Tv</td><td class="a5">5.1</td><td>its alright im just done with it</td></tr>
             <tr><td class="cmp">Kimetsu no Yaiba </td><td>26</td><td>Tv</td><td class="a5">5.1</td><td>it was alright but shouldnt be that popular, episode 19 was phenomenal</td></tr>
             <tr><td class="cmp">My Next Life as a Villainess</td><td>12</td><td>Tv</td><td class="a5">5</td><td>enjoyed it way too much for what it was</td></tr>
