--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -123,11 +123,10 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Shingeki no Kyoujin: Final Season</td><td>14</td><td>Tv</td><td class="a0">~</td><td>lets pretend animation shortcuts aren't real</td></tr>
+            <tr><td class="wat">Shingeki no Kyoujin: Final Season</td><td>15</td><td>Tv</td><td class="a0">~</td><td>lets pretend animation shortcuts aren't real</td></tr>
             <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>18</td><td>Tv</td><td class="a0">~</td><td>finally watching it</td></tr>         
             <tr><td class="wat">Princess Jellyfish</td><td>3</td><td>Tv</td><td class="a0">~</td><td>intentional crossdressing?! a miracle</td></tr>         
-            <tr><td class="wat">Jujutsu Kaisen</td><td>3</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>         
-            <tr><td class="wat">By the Grace of the Gods</td><td>3</td><td>Tv</td><td class="a0">~</td><td>extremely boring </td></tr>         
+            <tr><td class="wat">Jujutsu Kaisen</td><td>3</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>      
 
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
             <tr><td class="fav">Shigatsu wa Kimi no Uso</td><td>22</td><td>Tv</td><td class="a9">9.6</td><td>wanna cry?</td></tr>
@@ -311,6 +310,7 @@
             <tr><td class="pas">Karakai Jouzu no Takagi-san </td><td>2</td><td>Tv</td><td class="a0">~</td><td>was okay i think?</td></tr>
             <tr><td class="pas">Hisone to Maso-tan </td><td>2</td><td>Tv</td><td class="a0">~</td><td>cute so far</td></tr>
             <tr><td class="pas">Harmony </td><td>0</td><td>Film</td><td class="a0">~</td><td>looks alright</td></tr>
+            <tr><td class="drp">By the Grace of the Gods</td><td>3</td><td>Tv</td><td class="a0">~</td><td>extremely boring </td></tr>   
          <tr><td class="drp">Dororo </td><td>2</td><td>Tv</td><td class="a0">~</td><td>durororo?</td></tr>
          <tr><td class="drp">Soul Eater </td><td>1</td><td>Tv</td><td class="a0">~</td><td>nah</td></tr>
          <tr><td class="drp">Star Driver: Kagayaki no Takuto </td><td>4</td><td>Tv</td><td class="a0">~</td><td>boring</td></tr>
