--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <img class="logo" src="images/home/d1.webp" />  </center>
             <div class="row2 imgPixel">
             
-              <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
+              <p class="text-center">------------------------∞✧༺​♡༻✧∞------------------------
               <a href="/blog/" class="navi" ><img src="images/nav/flow1.png">most recently updated page: blog <img src="images/nav/flow1.png"></a>
-              ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
+              ------------------------∞✧༺​♡༻✧∞------------------------</p>
 
 
               <div class="col-sm-3 col-md-2"><img src="images/home/z2.png" style="margin-left:18px;height:90px;" class="img-center"></div>
