--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="col-sm-12 col-md-3 contentLeft">
-        <h1 style="margin-bottom:10px;margin-top:5px;"><a href="/dark" ><img src="images/home/1.png" width="50px" class="img-center img-title"></a></h1>
+        <h1 style="margin-bottom:10px;margin-top:5px;"><a href="/night" ><img src="images/home/1.png" width="50px" class="img-center img-title"></a></h1>
         <img src="images/nav/navig-main1.png" class="naviBanners">
         <a href="/bio" class="navi"><img src="images/nav/flow1.png">bio</a>
         <a href="/blog" class="navi"><img src="images/nav/flow1.png">blog</a>
