--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -124,8 +124,6 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Shingeki no Kyoujin: Final Season</td><td>15</td><td>Tv</td><td class="a0">~</td><td>lets pretend animation shortcuts aren't real</td></tr>
-            <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season Part 2</td><td>10</td><td>Tv</td><td class="a0">~</td><td>finally watching it</td></tr>         
             <tr><td class="wat">Princess Jellyfish</td><td>3</td><td>Tv</td><td class="a0">~</td><td>intentional crossdressing?! a miracle</td></tr>         
             <tr><td class="wat">Jujutsu Kaisen</td><td>3</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>      
 
@@ -186,6 +184,7 @@
             <tr><td class="cmp">Tokyo Ghoul √A </td><td>12</td><td>Tv</td><td class="a7">7</td><td>honestly i dont dislike it as much as everyone else does, anime divergence isnt inherintly bad</td></tr>
             <tr><td class="cmp">Shingeki no Kyojin </td><td>25</td><td>Tv</td><td class="a6">6.8</td><td>good scary premise</td></tr>
             <tr><td class="cmp">Violet Evergarden </td><td>13</td><td>Tv</td><td class="a6">6.8</td><td>probably not that good but i liked it</td></tr>
+            <tr><td class="cmp">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season Part 2</td><td>12</td><td>Tv</td><td class="a6">6.7</td><td>the last few episodes tricked me into liking it by making me cry alot</td></tr>         
             <tr><td class="cmp">Kakegurui </td><td>12</td><td>Tv</td><td class="a6">6.6</td><td></td></tr>
             <tr><td class="cmp">Kakegurui ×× </td><td>12</td><td>Tv</td><td class="a6">6.6</td><td></td></tr>
             <tr><td class="cmp">Youjo Senki </td><td>12</td><td>Tv</td><td class="a6">6.6</td><td></td></tr>
@@ -211,6 +210,7 @@
             <tr><td class="cmp">Noragami </td><td>12</td><td>Tv</td><td class="a5">5.5</td><td>that one falling scene</td></tr>
             <tr><td class="cmp">Goblin Slayer </td><td>12</td><td>Tv</td><td class="a5">5.4</td><td>lets not think about how this opens</td></tr>
             <tr><td class="cmp">DRIFTERS </td><td>12</td><td>Tv</td><td class="a5">5.3</td><td>joan of arc waifu, Jesus antagonist</td></tr>
+            <tr><td class="cmp">Shingeki no Kyoujin: Final Season</td><td>16</td><td>Tv</td><td class="a5">5.3</td><td>not the best execution, sorry mappa</td></tr>
             <tr><td class="cmp">ReLife </td><td>13</td><td>Tv</td><td class="a5">5.3</td><td></td></tr>
             <tr><td class="cmp">K-ON!! </td><td>26</td><td>Tv</td><td class="a5">5.1</td><td>good also but apparently less tho than season 1</td></tr>
             <tr><td class="drp">Dungeon ni Deai wo Motomeru no wa Machigatteiru Darou ka II </td><td>7</td><td>Tv</td><td class="a5">5.1</td><td>its alright im just done with it</td></tr>
