--- a/links/index.html
+++ b/links/index.html
@@ -28,7 +28,7 @@
   <div class="wrapper">
     
     <div class="image-cropper">
-      <img src="https://d1fdloi71mui9q.cloudfront.net/qA1j6iqRODrUXhtw7EVQ_3EiC23YUDO8nqSXM" class="rounded" />
+      <img src="../images/video/2.jpg" class="rounded" />
     </div>
     
     <h3>Ren Rose</h3>  
