--- a/links/index.html
+++ b/links/index.html
@@ -42,6 +42,8 @@
       <a target="_blank" href="https://instagram.com/omnisai.ren?igshid=1rzppyigdbu1e" class="link">Instagram - Anime Edits</a>
       <a target="_blank" href="https://www.reddit.com/user/OmnisaiRen" class="link">Reddit - Custom Electronics</a>
       <a target="_blank" href="https://twitter.com/omnisai" class="link">Twitter - Peak Humour</a>
+      <a target="_blank" href="https://www.speedrun.com/user/omnisairen" class="link">Speedrunning - Amateur Hours</a>
+      <a target="_blank" href="https://steamcommunity.com/id/omnisairen/" class="link">Steam - Friend Me?</a>
     </div>
     
     <h2>
