--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -124,7 +124,6 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Princess Jellyfish</td><td>10</td><td>Tv</td><td class="a0">~</td><td>intentional crossdressing?! a miracle</td></tr>         
             <tr><td class="wat">Jujutsu Kaisen</td><td>3</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>      
 
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
@@ -185,6 +184,7 @@
             <tr><td class="cmp">Shingeki no Kyojin </td><td>25</td><td>Tv</td><td class="a6">6.8</td><td>good scary premise</td></tr>
             <tr><td class="cmp">Violet Evergarden </td><td>13</td><td>Tv</td><td class="a6">6.8</td><td>probably not that good but i liked it</td></tr>
             <tr><td class="cmp">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season Part 2</td><td>12</td><td>Tv</td><td class="a6">6.7</td><td>the last few episodes tricked me into liking it by making me cry alot</td></tr>         
+            <tr><td class="cmp">Princess Jellyfish</td><td>11</td><td>Tv</td><td class="a6">6.7</td><td>handled crossdressing really well, thanks</td></tr>         
             <tr><td class="cmp">Kakegurui </td><td>12</td><td>Tv</td><td class="a6">6.6</td><td></td></tr>
             <tr><td class="cmp">Kakegurui ×× </td><td>12</td><td>Tv</td><td class="a6">6.6</td><td></td></tr>
             <tr><td class="cmp">Youjo Senki </td><td>12</td><td>Tv</td><td class="a6">6.6</td><td></td></tr>
