--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -124,7 +124,8 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Jujutsu Kaisen</td><td>3</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>      
+            <tr><td class="wat">Jujutsu Kaisen</td><td>5</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>      
+            <tr><td class="wat">Jobless Reincarnation</td><td>2</td><td>Tv</td><td class="a0">~</td><td>no pls why</td></tr>      
 
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
@@ -244,7 +245,7 @@
             <tr><td class="cmp">New Game! </td><td>12</td><td>Tv</td><td class="a4">4.1</td><td></td></tr>
             <tr><td class="cmp">Sora yori mo Tooi Basho </td><td>13</td><td>Tv</td><td class="a4">4.1</td><td>cool antarctica show</td></tr>
             <tr><td class="cmp">Tensei Shitara Slime Datta Ken </td><td>24</td><td>Tv</td><td class="a4">4.1</td><td></td></tr>
-            <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>13</td><td>Tv</td><td class="a4">4.1</td><td>not as good as the first but i still cried</td></tr>         
+            <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>13</td><td>Tv</td><td class="a4">4.1</td><td>invalidated s1 story but i still cried</td></tr>         
             <tr><td class="cmp">Tokyo Ghoul:re 2 </td><td>12</td><td>Tv</td><td class="a4">4.1</td><td>horrendous affront against the manga</td></tr>
             <tr><td class="cmp">A.I.C.O. -Incarnation- </td><td>12</td><td>Tv</td><td class="a4">4</td><td>bland</td></tr>
        <tr><td class="drp">Ao no Exorcist </td><td>2</td><td>Tv</td><td class="a4">4</td><td>probably good i just didnt like it at the time?</td></tr>
