--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -124,7 +124,7 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Jujutsu Kaisen</td><td>5</td><td>Tv</td><td class="a0">~</td><td>not bad not bad tbh</td></tr>      
+            <tr><td class="wat">Jujutsu Kaisen</td><td>13</td><td>Tv</td><td class="a0">~</td><td>salmon</td></tr>      
             <tr><td class="wat">Jobless Reincarnation</td><td>2</td><td>Tv</td><td class="a0">~</td><td>no pls why</td></tr>      
 
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
