--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -124,9 +124,8 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Jujutsu Kaisen</td><td>13</td><td>Tv</td><td class="a0">~</td><td>salmon</td></tr>      
-            <tr><td class="wat">Jobless Reincarnation</td><td>2</td><td>Tv</td><td class="a0">~</td><td>no pls why</td></tr>      
-
+            <tr><td class="wat">Jujutsu Kaisen</td><td>15</td><td>Tv</td><td class="a0">~</td><td>salmon</td></tr>      
+            
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
             <tr><td class="fav">Shigatsu wa Kimi no Uso</td><td>22</td><td>Tv</td><td class="a9">9.6</td><td>wanna cry?</td></tr>
@@ -317,6 +316,7 @@
          <tr><td class="cmp">Shingeki no Kyojin Kouhen: Jiyuu no Tsubasa </td><td>1</td><td>Tv</td><td class="a0">~</td><td></td></tr>
          <tr><td class="cmp">Shingeki no Kyojin OVA </td><td>3</td><td>Tv</td><td class="a0">~</td><td></td></tr>
          
+         <tr><td class="drp">Jobless Reincarnation</td><td>2</td><td>Tv</td><td class="a0">~</td><td>no pls why</td></tr>      
          <tr><td class="drp">Higurashi When They Cry Gou</td><td>3</td><td>Tv</td><td class="a0">~</td><td>nobody died!!!!!</td></tr>      
          <tr><td class="drp">By the Grace of the Gods</td><td>3</td><td>Tv</td><td class="a0">~</td><td>extremely boring </td></tr>   
          <tr><td class="drp">Sword Art Online: Alicization </td><td>1</td><td>Tv</td><td class="a0">~</td><td>no</td></tr>
@@ -327,7 +327,7 @@
          <tr><td class="drp">Aggressive Retsuko</td><td>4</td><td>Tv</td><td class="a0">~</td><td>not my thing</td></tr>
          <tr><td class="drp">Berserk </td><td>2</td><td>Tv</td><td class="a0">~</td><td></td></tr>
          <tr><td class="drp">Blood-C </td><td>1</td><td>Tv</td><td class="a0">~</td><td>seems not good</td></tr>
-         <tr><td class="drp">Dr. STONE </td><td>6</td><td>Tv</td><td class="a0">~</td><td>boringgggggggg but well produced</td></tr>
+         <tr><td class="drp">Dr. STONE </td><td>6</td><td>Tv</td><td class="a0">~</td><td>boring but kinda well produced ig</td></tr>
          <tr><td class="drp">Gate: Jieitai Kanochi nite, Kaku Tatakaeri </td><td>2</td><td>Tv</td><td class="a0">~</td><td>regular boring</td></tr>
          <tr><td class="drp">Hikaru no Go </td><td>3</td><td>Tv</td><td class="a0">~</td><td></td></tr>
          <tr><td class="drp">Himouto! Umaru-chan </td><td>1</td><td>Tv</td><td class="a0">~</td><td>no thanks</td></tr>
